fix settings spacing

--- a/packages/browser-wallet/src/popup/pages/Settings/Settings.scss
+++ b/packages/browser-wallet/src/popup/pages/Settings/Settings.scss
@@ -1,7 +1,7 @@
 .settings-page {
     &__link {
         display: block;
-        padding: rem(15px) 0;
+        padding: rem(10px) 0;
 
         &:first-of-type {
             padding-top: 0;
